--- a/CSS/MenuStyle.css
+++ b/CSS/MenuStyle.css
@@ -1,5 +1,5 @@
 #menucontainer {
-    width: 960px;
+    width: 80%;
     margin: 40px auto;
     border: 0px solid #222;
     background-color: #111;
