--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -9,7 +9,7 @@
 }
 
 .logo{
-	margin-top: 1%;
+	margin-top: 2%;
 	position: absolute;
 	width: auto;
 	font-size:90px;
@@ -24,6 +24,7 @@
 	margin-left: 80%;
 	margin-top: 7%;
 	border-radius:15px; 
+	outline: none;
 	width: auto;
 
 }
@@ -33,8 +34,6 @@ input[type=text]{
 }
 
 .shoppingCart a{
-
-	padding: 2px;
 	width: auto;
 	font-size:15px;
     text-decoration: none;
@@ -67,7 +66,7 @@ input[type=text]{
 .welcome_box{
 	width: auto;
 	height: auto;
-	padding: 10px;
+
 }
 
 .ad {
